fixed location layout bugs

--- a/src/Component/Home/home.css
+++ b/src/Component/Home/home.css
@@ -12,4 +12,6 @@
 
 .locationTable {
   display: inline-block;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
